--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Replication Files
 logo: /assets/img/rep-dem.jpg
 description: Lecy, J. D., Ashley, S. R., & Santamarina, F. J. (2019). Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. Public Performance & Management Review, 42(1), 115-141.
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
