--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Replication Files
+title: Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results
 logo: /assets/img/rep-dem.jpg
-description: Lecy, J. D., Ashley, S. R., & Santamarina, F. J. (2019). Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. Public Performance & Management Review, 42(1), 115-141.
+description: Replication Files
 show_downloads: false
 theme: jekyll-theme-minimal
