--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results
 logo: /assets/img/rep-dem.jpg
-description: Replication Files
+description: 
 show_downloads: false
 theme: jekyll-theme-minimal
