--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,15 @@
 title: "Replication"
 logo: /assets/img/rep-dem.jpg
-description: "" 
+description: false
 show_downloads: false
-show_footer: false
+footer: false
+
+navbar-links:
+  About Me: "aboutme"
+  Resources:
+    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+    - Learn markdown: "http://www.markdowntutorial.com/"
+    - GitHub Pages: "https://pages.github.com/"
+  Author's home: "http://deanattali.com"
+
 theme: jekyll-theme-minimal
