--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: false
+title:    
 logo: /assets/img/rep-dem.jpg
-description: false
+description:   
 show_downloads: false
-theme: minimal-mistakes-jekyll
-minimal_mistakes_skin: "dirt"
+theme: jekyll-theme-minimal
