--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:    
+title: Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results
 logo: /assets/img/rep-dem.jpg
 description:   
 show_downloads: false
