--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Do Nonprofit Missions Vary by the Political Ideology of Supporting Commun
 logo: /assets/img/rep-dem.jpg
 description:   
 show_downloads: false
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
